--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -361,9 +361,9 @@
 
           <div class="col-md-6 col-lg-4">
             <div class="block-blog text-left">
-              <a href="#"><img src="{%static '/img/icons/spam-blog-1.avif'%}" alt="img"></a>
+              <a href="#"><img src="{%static '/img/icons/spam-blog-2.avif'%}" alt="img"></a>
               <div class="content-blog">
-                <h4><a href="#">whats is the difference between good and bat typography</a></h4>
+                <h4><a href="#">Understanding Spam Detection and Preventive Measures</a></h4>
                 <span>03, March 2024</span>
                 <a class="float-end readmore" href="#">read more</a>
               </div>
@@ -374,7 +374,7 @@
             <div class="block-blog text-left">
               <a href="#"><img src="{%static '/img/icons/spam-blog-2.avif'%}" class="img-responsive" alt="img"></a>
               <div class="content-blog">
-                <h4><a href="#">whats is the difference between good and bat typography</a></h4>
+                <h4><a href="#">Understanding Spam Detection and Preventive Measures</a></h4>
                 <span>26,March 2024</span>
                 <a class="float-end readmore" href="#">read more</a>
               </div>
@@ -385,7 +385,7 @@
             <div class="block-blog text-left">
               <a href="#"><img src="{%static '/img/icons/spam-blog-3.avif'%}" class="img-responsive" alt="img"></a>
               <div class="content-blog">
-                <h4><a href="#">whats isthe difference between good and bat typography</a></h4>
+                <h4><a href="#">Understanding Spam Detection and Preventive Measures</a></h4>
                 <span>01,April,2024</span>
                 <a class="float-end readmore" href="#">read more</a>
               </div>
